# Hereditary_glaucoma

./: .gitignore  README.md  pyproject.toml  requirements.txt
glaucoma_fl/: client_app.py  server_app.py  task.py
glaucoma_fl/data/: chaksu.py
