[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glaucoma_fl"
version = "1.0.0"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.14.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.3.0",
    "torchvision==0.18.0"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "glaucoma_fl.server_app:app"
clientapp = "glaucoma_fl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
local-epochs = 1
learning-rate = 0.1
batch-size = 32
out-folder = "<<PATH TO OUTPUT FOLDER>>"
image-folder-train = "<<PATH TO CHAKSU>>/Train/1.0_Original_Fundus_Images"
labels-folder-train = "<<PATH TO CHAKSU>>/Train/6.0_Glaucoma_Decision/Glaucoma_Decision_Comparison_{}_majority.csv"
image-folder-test = "<<PATH TO CHAKSU>>/Test/1.0_Original_Fundus_Images"
labels-folder-test = "<<PATH TO CHAKSU>>/Test/6.0_Glaucoma_Decision/Glaucoma_Decision_Comparison_{}_majority.csv"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.2 # at most 5 ClientApp will run in a given GPU

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true